@@ -1,3 +1,7 @@
+2011-08-18  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/edge/util.jl: added move-window-to-corner and
+	move-window-to-edge helpers
+
 2011-07-09  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/edge/actions.jl: fixed calling tile-windows
 
